--- a/src/main/resources/static/bootstrap/css/admin-style.css
+++ b/src/main/resources/static/bootstrap/css/admin-style.css
@@ -50,9 +50,9 @@
     /*padding-bottom: 5%;*/
 }
 
-.panel {
+/*.panel {
     margin-top: 100px;
-}
+}*/
 
 .panel .panel-body {
     padding: 0 15px 15px;
