--- a/src/main/resources/static/bootstrap/css/admin-style.css
+++ b/src/main/resources/static/bootstrap/css/admin-style.css
@@ -39,6 +39,7 @@
 }
 .admin-right .page-header h1{
     padding-left: 20px;
+    padding-right: 20px;
     margin-top: 20px;
     margin-bottom: 20px;
 }
