--- a/src/main/resources/static/bootstrap/css/admin-style.css
+++ b/src/main/resources/static/bootstrap/css/admin-style.css
@@ -125,3 +125,8 @@ h1 {
     padding-left: 20px;
     padding-right: 20px;
 }
+.fyl-form-btn{
+    position: fixed;
+    top: 35px;
+    right: 10%;
+}
